# SSHServer

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
header/: mySSHClass.h
source/: mySSHClass.cpp
tests/: mytests.cpp
